--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "script.js",
   "dependencies": {
+    "body-parser": "^1.12.4",
     "express": "^4.12.3",
     "jade": "^1.9.2"
   },
